--- a/.gitignore
+++ b/.gitignore
@@ -140,4 +140,5 @@ terraform/.terraform.lock.hcl
 terraform/.terraform.tfstate.lock.info
 terraform/.terraform/
 terraform/terraform.tfstate
+terraform.tfstate.backup
 .sec.env
