--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -1,8 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: backstage
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backstage
-  namespace: default
+  namespace: backstage
 spec:
   replicas: 1
   selector:
