--- a/kubernetes/manifests/backstage/service.yaml
+++ b/kubernetes/manifests/backstage/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backstage
-  namespace: default
+  namespace: backstage
 spec:
   selector:
     app: backstage
