--- a/kubernetes/manifests/ml-models/huggingface-deployment.yaml
+++ b/kubernetes/manifests/ml-models/huggingface-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bert-model
-  namespace: default
+  namespace: ml-models
   labels:
     app: bert-model
 spec:
