--- a/kubernetes/manifests/ml-models/kustomization.yaml
+++ b/kubernetes/manifests/ml-models/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- namespace.yaml
 - huggingface-deployment.yaml
 - gpu-resources.yaml
 - service.yaml
