--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -15,21 +15,21 @@ spec:
     spec:
       containers:
       - name: backstage
-        image: giantswarm/backstage:latest
+        image: backstage/backstage:latest
         ports:
         - containerPort: 7007
         env:
         - name: NODE_ENV
           value: production
-        - name: APP_CONFIG_app_baseUrl
-          value: "http://localhost:7007"
-        - name: APP_CONFIG_backend_baseUrl
-          value: "http://localhost:7007"
         volumeMounts:
-        - name: app-config
+        - name: backstage-config
           mountPath: /app/app-config.yaml
           subPath: app-config.yaml
       volumes:
-      - name: app-config
+      - name: backstage-config
         configMap:
           name: backstage-config
+      tolerations:
+      - key: "nvidia.com/gpu"
+        operator: "Exists"
+        effect: "NoSchedule"
