--- a/kubernetes/manifests/backstage/configmap.yaml
+++ b/kubernetes/manifests/backstage/configmap.yaml
@@ -7,25 +7,15 @@ data:
   app-config.yaml: |
     app:
       title: ML Platform
-      baseUrl: http://localhost:8080
-
-    organization:
-      name: ML Engineering Team
+      baseUrl: http://backstage.default.svc.cluster.local
 
     backend:
-      baseUrl: http://localhost:8080
+      baseUrl: http://backstage.default.svc.cluster.local
       listen:
         port: 7007
-      cors:
-        origin: http://localhost:8080
       database:
         client: better-sqlite3
         connection: ':memory:'
-
-    catalog:
-      locations:
-        - type: file
-          target: ../../examples/catalog-info.yaml
 
     techdocs:
       builder: 'local'
@@ -34,24 +24,8 @@ data:
       publisher:
         type: 'local'
 
-    scaffolder:
-      templates:
-        - id: ml-model-template
-          type: website
-          title: ML Model Deployment
-          description: Deploy an ML model from Hugging Face to GKE with GPU support
-          tags:
-            - ml
-            - model
-            - gpu
-          path: ./templates/ml-model-template.yaml
-
     grafana:
-      # Even if you don't use Grafana, the config needs to exist
       domain: example.com
-      # You can safely leave these as defaults for now
-      dashboardPattern: 'kubernetes-'
-      ingressUrl: 'https://grafana.example.com'
       isEnabled: false
 
     kubernetes:
@@ -62,5 +36,11 @@ data:
           clusters:
             - name: 'ml-platform'
               url: 'https://kubernetes.default.svc'
-              serviceAccountToken: # This will be populated from the service account
               skipTLSVerify: true
+              authProvider: 'serviceAccount'
+              serviceAccountToken: ""
+
+    catalog:
+      locations:
+        - type: url
+          target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
