--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -13,6 +13,10 @@ spec:
       labels:
         app: backstage
     spec:
+      tolerations:
+      - key: "nvidia.com/gpu"
+        operator: "Exists"
+        effect: "NoSchedule"
       containers:
       - name: backstage
         image: europe-west4-docker.pkg.dev/meetup-ai/meetup-ai/backstage:latest
@@ -27,11 +31,11 @@ spec:
           value: production
         resources:
           limits:
-            memory: "2Gi"
-            cpu: "1"
-          requests:
             memory: "1Gi"
             cpu: "500m"
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
       volumes:
       - name: config
         configMap:
