--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -13,22 +13,34 @@ spec:
       labels:
         app: backstage
     spec:
+      serviceAccountName: backstage
       tolerations:
       - key: "nvidia.com/gpu"
         operator: "Exists"
         effect: "NoSchedule"
       containers:
       - name: backstage
-        image: europe-west4-docker.pkg.dev/meetup-ai/meetup-ai/backstage:latest
+        image: ghcr.io/backstage/backstage:latest
         ports:
         - containerPort: 7007
         volumeMounts:
         - name: config
-          mountPath: /app/app-config.custom.yaml
+          mountPath: /app/app-config.yaml
+          subPath: app-config.yaml
+        - name: config 
+          mountPath: /app/app-config.production.yaml
           subPath: app-config.yaml
         env:
         - name: NODE_ENV
           value: production
+        - name: BACKSTAGE_APP_ENV
+          value: production
+        - name: POSTGRES_HOST
+          value: ""
+        - name: POSTGRES_USER
+          value: ""
+        - name: POSTGRES_PASSWORD
+          value: ""
         resources:
           limits:
             memory: "1Gi"
