--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -30,6 +30,12 @@ spec:
         - name: config 
           mountPath: /app/app-config.production.yaml
           subPath: app-config.production.yaml
+        - name: catalog
+          mountPath: /app/catalog
+          # And under volumes
+        - name: catalog
+          configMap:
+            name: backstage-catalog
         env:
         - name: NODE_ENV
           value: production
