--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -35,12 +35,20 @@ spec:
           value: production
         - name: BACKSTAGE_APP_ENV
           value: production
-        # Remove PostgreSQL vars and add SQLite vars
+        # Database config
         - name: BACKSTAGE_DATABASE_CLIENT
           value: "better-sqlite3"
         - name: BACKSTAGE_DATABASE_CONNECTION
           value: ":memory:"
+        # Disable Kubernetes
         - name: BACKSTAGE_KUBERNETES_ENABLED
+          value: "false"
+        # Auth and permissions
+        - name: BACKSTAGE_AUTH_GUEST_ENABLED
+          value: "true"
+        - name: BACKSTAGE_AUTH_GUEST_ALLOW_GUEST_ACCESS
+          value: "true" 
+        - name: BACKSTAGE_PERMISSION_ENABLED
           value: "false"
         resources:
           limits:
