--- a/kubernetes/manifests/backstage/configmap.yaml
+++ b/kubernetes/manifests/backstage/configmap.yaml
@@ -18,11 +18,22 @@ data:
         connection: ':memory:'
       cache:
         store: memory
-      auth:
-        # Configure authentication to not require login for demo
-        keys:
-          - secret: backstage-demo-key
-        providers: {}
+      # Remove auth key from backend section if it exists
+
+    # Have only one auth section
+    auth:
+      # Enable guest access for demo purposes
+      providers:
+        guest:
+          enabled: true
+          authHandler: 
+            allowGuestAccess: true
+      # Configure authentication to not require login for demo
+      keys:
+        - secret: backstage-demo-key
+
+    permission:
+      enabled: false
 
     techdocs:
       builder: 'local'
@@ -38,9 +49,6 @@ data:
     # Explicitly set kubernetes config
     kubernetes:
       enabled: false
-      serviceLocatorMethod:
-        type: 'multiTenant'
-      clusterLocatorMethods: []
 
     catalog:
       # Set up anonymous access to the catalog
@@ -54,10 +62,7 @@ data:
           target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/acme-corp.yaml
         - type: url
           target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/org.yaml
-        - type: file
-          target: /app/catalog/ml-models.yaml
   
-  # Add a more complete production config file
   app-config.production.yaml: |
     app:
       title: ML Platform
@@ -66,6 +71,7 @@ data:
       database:
         client: better-sqlite3
         connection: ':memory:'
+    
     permission:
       enabled: false
     
@@ -76,17 +82,7 @@ data:
           enabled: true
           authHandler: 
             allowGuestAccess: true
-
-    # Complete kubernetes configuration to avoid errors
+    
+    # Disable kubernetes
     kubernetes:
       enabled: false
-      serviceLocatorMethod:
-        type: 'multiTenant'
-      clusterLocatorMethods:
-        - type: 'config'
-          clusters: []
-
-    auth:
-      # Disable authentication for the demo
-      providers: {}
-      environment: development
